--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -3,15 +3,23 @@
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
         <h1>プロフィール編集</h1>
-        <%= form_with model: @client, local:true do |f| %>
+        <%= form_with model: @client, url: client_path, local:true do |f| %>
+          <p>
+            <% if @client.profile_image.attached? %>
+              <%= image_tag @client.profile_image(resize:'300x300') %> <br>
+            <% else %>
+              <%= image_tag "no_image.jpg"%>
+            <% end %>
+          </p>
+          <p><%= f.file_field :profile_image %></p>
           <label>Name</label>
-          <p> <%= f.text_field :name %> </p>
+          <p> <%= f.text_field :name, autofocus: true %> </p>
           <label>Image</label>
-          <!--<p>. %= f.attachment_field :profile_image, placeholder: "プロフィール画像" %> </p>-->
+
           <label>introduction</label>
           <p> <%= f.text_area :introduction %> </p>
           <div class="upload">
-            <%= f.submit " Update User", class: 'btn btn-success' %>
+            <%= f.submit "更新する", class: 'btn btn-success' %>
           </div>
         <% end %>
       </div>
