--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -4,7 +4,9 @@
         <div class = "new book create" >
           <h2 class="mt-3">投稿</h2>
           <div class = "form-group">
-            <%= form_with model: @blog, local:true do |f| %>
+            <%= form_with model: @blog, url: blogs_path, local:true do |f| %>
+              <p>投稿画像</p>
+              <%= f.file_field :images %>
               <p>Title</p>
               <%= f.text_field :title %>
               <p>Opinion</p>
@@ -15,52 +17,47 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-9">
         <h2>投稿一覧</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>image </th>
-              <th>name </th>
-              <th colspan="3"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- % @users.each do |user| %>-->
-            <!--  <tr>-->
-            <!--    <td> %= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", size:"40x40" %></td>-->
-            <!--    <td> %= user.name %></td>-->
-            <!--    <td>フォロー数:  %= user.followings.count %> </td>-->
-            <!--    <td>フォロワー数: %= user.followers.count %> </td>-->
-            <!--    <td>-->
-            <!--      <div id="follow_form">-->
-            <!--         % if current_user.following?(user) %>-->
-            <!--           %= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>-->
-            <!--         % else %>-->
-            <!--           %= link_to "フォローする", user_relationships_path(user.id), method: :post %>-->
-            <!--         % end %>-->
-            <!--      </div>-->
-            <!--    </td>-->
-            <!--    <td> %= link_to "Show", user_path(user.id) %></td>-->
-            <!--  </tr>-->
-            <!-- % end %>-->
-          </tbody>
-        </table>
-      </div>
-      <div class="col-md-3">
-        <div class = "new book create" >
-          <h2 class="mt-3">投稿</h2>
-          <div class = "form-group">
-            <%= form_with model: @blog, local:true do |f| %>
-              <p>Title</p>
-              <%= f.text_field :title %>
-              <p>Opinion</p>
-              <%= f.text_area :body %>
-              <%= f.submit "投稿する", class: 'btn btn-success' %>
-            <% end %>
-          </div>
+        <div class="twitter__block">
+          <% @blogs.each do |blog| %>
+            <figure>
+              <% if @client.profile_image.attached? %>
+                <%= image_tag @client.profile_image.variant(resize: '70x70') %>
+              <% end %>
+              <%= blog.client.name %>
+            </figure>
+            <div class="twitter__block-text">
+              <div class="name">
+                
+              </div>
+              <div class="in-pict">
+                <% if blog.images.attached? %>
+                  <%= image_tag blog.images[0].variant(resize: '300x400') %>
+                <% end %>
+              </div>
+              <!--%= blog.title %>-->
+              <div class="text">
+                <%= blog.body %>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
+      <!--<div class="col-md-3">-->
+      <!--  <div class = "new book create" >-->
+      <!--    <h2 class="mt-3">投稿</h2>-->
+      <!--    <div class = "form-group">-->
+      <!--      %= form_with model: @blog, local:true do |f| %>-->
+      <!--        <p>Title</p>-->
+      <!--        %= f.text_field :title %>-->
+      <!--        <p>Opinion</p>-->
+      <!--        %= f.text_area :body %>-->
+      <!--        %= f.submit "投稿する", class: 'btn btn-success' %>-->
+      <!--      % end %>-->
+      <!--    </div>-->
+      <!--  </div>-->
+      <!--</div>-->
       </div>
       </div>
     </div>
