--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -2,11 +2,13 @@
   <div class = "row" >
 
     <div class = "col-md-3" >
-      <% if @client.profile_image.attached? %>
-        <% @client.profile_image.each do |image| %>
-          <%= image_tag image, fallback: "no_image.jpg" %> <br>
+      <div class = "rounded-circle">
+        <% if @client.profile_image.attached? %>
+          <%= image_tag @client.profile_image.variant(resize: '300x300') %> <br>
+        <% else %>
+          <%= image_tag "no_image.jpg"%>
         <% end %>
-      <% end %>
+      </div>
     </div>
 
     <div class = "col-md-9" >
@@ -18,16 +20,16 @@
           <tr><td><%= current_client.name %></td></tr>
           <tr>
             <td><%= current_client.name %></td>
-            <td><%= current_client.name %></td>
-            <td><%= current_client.name %></td>
+            <td><%= current_client.name %></td> <!--フォロワー数を表示予定-->
+            <td><%= current_client.name %></td> <!--フォロ中数を表示予定-->
           </tr>
           <tr><td>自己紹介文</td></tr>
           <tr><td><%= current_client.introduction %></td></tr>
         </tbody>
       </table>
       <%= link_to edit_client_path(@client.id) do %>
-        <button class = "btn btn-outline-secondary btn-block">
-          <i class = "プロフィール編集へ" ></i>
+        <button class = "btn btn-outline-secondary">
+          <i>プロフィール編集へ</i>
         </button>
       <% end %>
     </div>
