--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -6,7 +6,7 @@
         <%= form_with model: @client, url: client_path, local:true do |f| %>
           <p>
             <% if @client.profile_image.attached? %>
-              <%= image_tag @client.profile_image(resize:'300x300') %> <br>
+              <%= image_tag @client.profile_image.variant(resize: '300x300'), class: "rounded-circle" %> <br>
             <% else %>
               <%= image_tag "no_image.jpg"%>
             <% end %>
