--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -4,7 +4,7 @@
     <div class = "col-md-3" >
       <div class = "rounded-circle">
         <% if @client.profile_image.attached? %>
-          <%= image_tag @client.profile_image.variant(resize: '300x300') %> <br>
+          <%= image_tag @client.profile_image.variant(resize: '300x300'), class: "rounded-circle" %> <br>
         <% else %>
           <%= image_tag "no_image.jpg"%>
         <% end %>
