ゴルフ場api完成

--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -38,16 +38,9 @@
               <div class="text">
                 <%= blog.body %>
               </div>
-              
-              <% if blog.favorited_by?(current_client) %>
-                <%= link_to blog_favorites_path(blog), method: :delete, remote: true do %>
-                  ♥<%= blog.favorites.count %>
-                <% end %>
-              <% else %>
-                <%= link_to blog_favorites_path(blog), method: :post, remote: true do %>
-                  ♡<%= blog.favorites.count %>
-                <% end %>
-              <% end %>
+              <div id = "favorite-btn-<%= blog.id %>">
+                <%= render "clients/favorites/favorite", blog: blog %>
+              </div>
             </div>
           <% end %>
         </div>
