--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -17,49 +17,36 @@
 
       <div class="col-md-9">
         <h2>投稿一覧</h2>
-        <div class="twitter__block">
-          <% @blogs.each do |blog| %>
-            <figure>
-              <% if blog.client.profile_image.attached? %>
-                <%= image_tag blog.client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
+        <% @blogs.each do |blog| %>
+          <figure>
+            <% if blog.client.profile_image.attached? %>
+              <%= image_tag blog.client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
+            <% end %>
+            <%= link_to blog.client.name, client_path(blog.client.id) %>
+          </figure>
+          <div>
+            <div>
+              <% if blog.images.attached? %>
+                <%= link_to image_tag blog.images[0].variant(resize: '300x400') %>
+                <!--, blog_path(blog.id)-->
               <% end %>
-              <%= blog.client.name %>
-            </figure>
-            <div class="twitter__block-text">
-              <div class="name">
-
-              </div>
-              <div class="in-pict">
-                <% if blog.images.attached? %>
-                  <%= image_tag blog.images[0].variant(resize: '300x400') %>
-                <% end %>
-              </div>
-              <!--%= blog.title %>-->
-              <div class="text">
-                <%= blog.body %>
-              </div>
-              <div id = "favorite-btn-<%= blog.id %>">
-                <%= render "clients/favorites/favorite", blog: blog %>
-              </div>
             </div>
-          <% end %>
-        </div>
-      </div>
-      <!--<div class="col-md-3">-->
-      <!--  <div class = "new book create" >-->
-      <!--    <h2 class="mt-3">投稿</h2>-->
-      <!--    <div class = "form-group">-->
-      <!--      %= form_with model: @blog, local:true do |f| %>-->
-      <!--        <p>Title</p>-->
-      <!--        %= f.text_field :title %>-->
-      <!--        <p>Opinion</p>-->
-      <!--        %= f.text_area :body %>-->
-      <!--        %= f.submit "投稿する", class: 'btn btn-success' %>-->
-      <!--      % end %>-->
-      <!--    </div>-->
-      <!--  </div>-->
-      <!--</div>-->
-      </div>
+            <!--%= blog.title %>-->
+            <div>
+              <%= blog.body %>
+            </div>
+            <div id = "favorite-btn-<%= blog.id %>">
+              <%= render "clients/favorites/favorite", blog: blog %>
+              <!--%= blog.blog_comment.count %>-->
+            </div>
+            <div>
+              <%= form_with model:[blog, @blog_comment],url: blog_blog_comments_path(blog), local: true do |f| %>
+                <%= f.text_area:comment,placeholder:"コメントを書く" %>
+                <%= f.submit "コメントする" %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
