--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,13 @@
-<h1>ようこそゴルとも！へ＾＾</h1>
-  
+  <div class="main-visual">
+    <div class="container">
+      <div class = "row">
+        <div class = "col">
+          <div class = "card">
+            <h1 class = "messege">GOLF FRIEND</h1>
+            <p class = "messege1"><%= link_to "アカウントをお持ちの方はこちら", new_client_session_path, class: 'nav-link text-dark mr-3' %></p>
+            <p class = "messege2"><%= link_to "新規登録はこちらから", new_client_registration_path, class: 'nav-link text-dark mr-3' %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
