--- a/app/assets/stylesheets/clients/clients.scss
+++ b/app/assets/stylesheets/clients/clients.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the clients/clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+  .main-visual {
+    width: 100%; /* 横幅いっぱい */
+    height: 500px; /* 高さ300px */
+    background-image: image-url("sample3.jpg");
+    background-size: cover; /* 縦横比を維持したまま背景領域を埋め尽くす */
+    background-position: center; /* 背景画像を中央に配置 */
+    }
