--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -1,7 +1,7 @@
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3">
-        <div class = "new book create" >
+        <div class = "new-book-create" >
           <h2 class="mt-3">投稿</h2>
           <div class = "form-group">
             <%= form_with model: @blog, url: blogs_path, local:true do |f| %>
@@ -15,29 +15,29 @@
         </div>
       </div>
 
-      <div class="col-md-9">
+      <div class="col-md-9" style = "overflow:auto;">
         <h2>投稿一覧</h2>
         <% @blogs.each do |blog| %>
           <figure>
             <% if blog.client.profile_image.attached? %>
-              <%= image_tag blog.client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
+              <%= image_tag blog.client.profile_image.variant(resize: '60x50'), class: "rounded-circle" %>
             <% end %>
             <%= link_to blog.client.name, client_path(blog.client.id) %>
           </figure>
           <div>
             <div>
               <% if blog.images.attached? %>
-                <%= link_to image_tag blog.images[0].variant(resize: '300x400') %>
-                <!--, blog_path(blog.id)-->
+                <%= link_to blog_path(blog.id) do %>
+                  <%= image_tag blog.images[0].variant(resize: '300x400') %>
+                <% end %>
               <% end %>
             </div>
-            <!--%= blog.title %>-->
             <div>
               <%= blog.body %>
             </div>
             <div id = "favorite-btn-<%= blog.id %>">
-              <%= render "clients/favorites/favorite", blog: blog %>
-              <!--%= blog.blog_comment.count %>-->
+              <%= render "clients/favorites/favorite", blog: blog %>&nbsp;
+              コメント数:<%= blog.blog_comments.count %>件
             </div>
             <div>
               <%= form_with model:[blog, @blog_comment],url: blog_blog_comments_path(blog), local: true do |f| %>
