--- a/app/views/clients/relationships/followers.html.erb
+++ b/app/views/clients/relationships/followers.html.erb
@@ -14,6 +14,11 @@
             <tbody>
               <% @client.each do |client| %>
                 <tr>
+                  <td>
+                    <% if client.profile_image.attached? %>
+                      <%= image_tag client.profile_image.variant(resize: '70x70'), class: "rounded-circle" %>
+                    <% end %>
+                  </td>
                   <td><%= client.name %></td>
                   <td>フォロー数: <%= client.followings.count %></td>
                   <td>フォロワー数: <%= client.followers.count %></td>
