--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>GolfFriends</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
+    <script src="https://kit.fontawesome.com/846ce04829.js" crossorigin="anonymous"></script>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -11,52 +13,49 @@
 
   <body>
     <header>
-      <nav class ="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class ="navbar navbar-expand-lg navbar-dark bg-white" style = "text-black">
         <div class = "container">
           <% if client_signed_in? %>
-            <%= link_to "ゴルとも！", clients_path, class: "navbar-brand" %>
+            <%= link_to "ゴルとも！", clients_path, class: "nav-link text-dark" %>
           <% elsif admin_signed_in? %>
-            <%= link_to "ゴルとも！", admins_clients_path, class: "navbar-brand" %>
+            <%= link_to "ゴルとも！", admins_clients_path, class: "nav-link text-dark" %>
           <% else %>
-            <%= link_to "ゴルとも！", root_path, class: "navbar-brand" %>
+            <%= link_to "ゴルとも！", root_path, class: "nav-link text-dark" %>
           <% end %>
           <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
             <ul class="navbar-nav ml-auto">
               <% if client_signed_in? %>
                 <li>
-                 <%= link_to "マイページ", client_path(current_client), class: 'nav-link text-light mr-3' %>
+                 <%= link_to "マイページ", client_path(current_client), class: 'nav-link text-dark mr-3' %>
                 </li>
                 <li>
-                  <%= link_to "ゴルフ場検索", clients_rakuten_search_path, class: 'nav-link text-light mr-3'  %>
+                  <%= link_to "ゴルフ場検索", clients_rakuten_search_path, class: 'nav-link text-dark mr-3'  %>
                 </li>
                 <li>
-                  <%= link_to "ユーザー検索", root_path, class: 'nav-link text-light mr-3' %>
+                  <%= link_to "ユーザー検索", new_client_path, class: 'nav-link text-dark mr-3' %>
                 </li>
                 <li>
-                  <%= link_to "ログアウト", destroy_client_session_path, method: :delete, class: 'nav-link text-light mr-3' %>
+                  <%= link_to "ログアウト", destroy_client_session_path, method: :delete, class: 'nav-link text-dark mr-3' %>
                 </li>
               <% elsif admin_signed_in? %>
                 <li>
-                 <%= link_to "ゴルフ場検索", root_path, class: 'nav-link text-light mr-3' %>
+                 <%= link_to "ゴルフ場検索", root_path, class: 'nav-link text-dark mr-3' %>
                 </li>
                 <li>
-                  <%= link_to "投稿一覧", admins_blogs_path, class: 'nav-link text-light mr-3'  %>
+                  <%= link_to "投稿一覧", admins_blogs_path, class: 'nav-link text-dark mr-3'  %>
                 </li>
                 <li>
-                  <%= link_to "ユーザー一覧", admins_clients_path, class: 'nav-link text-light mr-3' %>
+                  <%= link_to "ユーザー一覧", admins_clients_path, class: 'nav-link text-dark mr-3' %>
                 </li>
                 <li>
-                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-light mr-3' %>
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark mr-3' %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "ゴルフ場検索", root_path, class: 'nav-link text-light mr-3'  %>
+                  <%= link_to "新規登録", new_client_registration_path, class: 'nav-link text-dark mr-3' %>
                 </li>
                 <li>
-                  <%= link_to "新規登録", new_client_registration_path, class: 'nav-link text-light mr-3' %>
-                </li>
-                <li>
-                  <%= link_to "ログイン", new_client_session_path, class: 'nav-link text-light mr-3'  %>
+                  <%= link_to "ログイン", new_client_session_path, class: 'nav-link text-dark mr-3'  %>
                 </li>
               <% end %>
             </ul>
@@ -78,11 +77,11 @@
       <%= yield %>
     </main>
     <footer>
-      <nav class ="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class ="navbar navbar-expand-lg navbar-dark bg-white">
         <div class="navbar-collapse collapse show" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-            <%= link_to "お問い合わせ", clients_inquiry_index_path, class: 'nav-link text-light mr-3' %>
-            <%= link_to "プライバシーポリシー", home_index_path, class: 'nav-link text-light mr-3' %>
+          <ul class="navbar-nav ml-auto" style = "center">
+            <%= link_to "お問い合わせ", clients_inquiry_index_path, class: 'nav-link text-dark mr-3' %>
+            <%= link_to "プライバシーポリシー", home_index_path, class: 'nav-link text-dark mr-3' %>
           </ul>
         </div>
       </nav>
