--- a/app/views/clients/favorites/_favorite.html.erb
+++ b/app/views/clients/favorites/_favorite.html.erb
@@ -1,9 +1,9 @@
   <% if blog.favorited_by?(current_client) %>
     <%= link_to blog_favorites_path(blog), method: :delete, remote: true do %>
-      ♥<%= blog.favorites.count %>
+      いいね&nbsp;♥<%= blog.favorites.count %>
     <% end %>
   <% else %>
     <%= link_to blog_favorites_path(blog), method: :post, remote: true do %>
-      ♡<%= blog.favorites.count %>
+      いいね&nbsp; ♡<%= blog.favorites.count %>
     <% end %>
   <% end %>
