--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
       <div class = "row">
         <div class = "col">
-          <div class = "card">
+          <div class = "card" style = "width: 80%; opacity: 0.7; padding-right: 15px; padding-left: 15px; margin: 120px;">
             <h1 class = "messege">GOLF FRIEND</h1>
             <p class = "messege1"><%= link_to "アカウントをお持ちの方はこちら", new_client_session_path, class: 'nav-link text-dark mr-3' %></p>
             <p class = "messege2"><%= link_to "新規登録はこちらから", new_client_registration_path, class: 'nav-link text-dark mr-3' %></p>
