--- a/app/views/clients/blog_comments/_comment.html.erb
+++ b/app/views/clients/blog_comments/_comment.html.erb
@@ -1,4 +1,1 @@
-  <%= form_with model:[blog_find, blog_comment], local: true do |f| %>
-    <%= f.text_area:comment.rows:"5",placeholder:"コメントを書く" %>
-    <%= f.submit "コメントする" %>
-  <% end %>
+コメント数:&nbsp;<%= blog.blog_comments.count %>件
