--- a/app/views/clients/rakuten/search.html.erb
+++ b/app/views/clients/rakuten/search.html.erb
@@ -1,5 +1,5 @@
-  <div class = "container">
-    <div class = "row">
+  <div class = "container" style = "margin-bottom: 400px;">
+    <div class = "row mt-5 mb-5">
       <div class = "col">
         <%= form_tag :clients_rakuten_search, method: :get do  %>
           <%= label_tag :keyword, 'キーワード検索' %>
