--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+    <div class="col-12">
       <h1>利用規約</h1>
 
       <p>この利用規約（以下，「本規約」といいます。）は，株式会社 MINE’S（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
