--- a/app/views/clients/clients/index.html.erb
+++ b/app/views/clients/clients/index.html.erb
@@ -20,6 +20,8 @@
               <div class = "client-name">
                 <% if blog.client.profile_image.attached? %>
                   <%= image_tag blog.client.profile_image.variant(resize: '60x60'), class: "circle"  %>
+                <% else %>
+                  <%= image_tag "no_image.jpg", class: "circle"%>
                 <% end %>
                 <%= link_to blog.client.name, client_path(blog.client.id), class: "client-name" %>
               </div>
@@ -29,7 +31,7 @@
                 <div class = "card-img-top">
                   <% if blog.images.attached? %>
                     <%= link_to blog_path(blog.id) do %>
-                      <%= image_tag blog.images[0].variant(resize: '300x400') %>
+                      <%= image_tag blog.images[0].variant(resize: '240x300') %>
                     <% end %>
                   <% end %>
                 </div>
