--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -75,7 +75,11 @@
         </p>
       </div><br>
     <% end %>
-    <%= render "clients/shared/links" %>
+    <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+        <%= link_to "グーグルアカウントでログイン", omniauth_authorize_path(resource_name, provider), method: :post %><br />
+      <% end %>
+    <% end %>
   </div>
 
 
